fixed desktop view on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 /*** ELEMENT MODIFIERS ***/
+
+@media screen and (min-width: 768px) {
+    
+  }
+
 body{
     margin:0;
     text-align: center;
